# McAiServer

./: .gitignore  Cargo.toml  prompt.txt
src/: config.rs  main.rs
src/audio_input/: mic_input.rs  mod.rs  tcp_input.rs
src/audio_output/: mod.rs  speaker_output.rs  tcp_output.rs  udp_output.rs
src/gemini_integration/: mod.rs  tools.rs
src/openai_integration/: mod.rs  tools.rs
