[package]
name = "ai_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
lame-sys = "0.1.2"
gemini-live-api = "0.1.0"
tokio-util = "0.7.15"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
