[package]
name = "ai_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
lame-sys = "0.1.2"
gemini-live-api = "0.1.0"
tokio-util = "0.7.15"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
cpal = "0.15.3"
